[package]
name = "soroban-nft"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-auth = { version = "0.4.3" }
soroban-sdk = { version = "0.4.3" }

[dev-dependencies]
soroban-auth = { version = "0.4.3", features = ["testutils"] }
soroban-sdk = { version = "0.4.3", features = ["testutils"] }
ed25519-dalek = "1.0.1"
rand = "0.7.3"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true